<resources>
    <string name="app_name">Dynamic Wallpaper</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favourites">Favourites</string>
    <string name="setting">Setting</string>
    <string name="find_wallpaper">Find Wallpaper..</string>
    <string name="img">Img</string>
    <string name="set">SET</string>
    <string name="favorite">Favourite</string>
    <string name="main_recyclerview">Main RecyclerView</string>
    <string name="home_screen_icon">Home Screen Icon</string>
    <string name="set_on_home_screen">Set on home screen</string>
    <string name="lock_screen_icon">Lock Screen Icon</string>
    <string name="set_on_lock_screen">Set on lock screen</string>
    <string name="both_screens_icon">Both Screens Icon</string>
    <string name="set_on_both_screen">Set on both screen</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="play">Play</string>
    <string name="set_on">Set On</string>
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="change_your_wallpaper_every">Change Your Wallpaper Every</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="please_check_your_internet_connection">Please Check Your Internet Connection.</string>
    <string name="retry">Retry</string>
    <string name="theme_text">Switch To Dark Mode</string>
    <string name="no_favourites">No Favourites</string>
    <string name="explore_wallpapers">Explore Wallpapers</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="error_loading_wallpapers">Error Loading Wallpapers!!</string>
    <string name="image_added_to_favourite">Image Added To Favourite</string>
    <string name="image_already_in_fav">Image Already in Favourites</string>
    <string name="clear_all">Clear All</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="play_wallpaper_info">Please select at least 2 wallpapers to play!</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="homescreen">HomeScreen</string>
    <string name="lockscreen">LockScreen</string>
    <string name="both">Both</string>
    <string name="wallpaper_change_scheduled">Wallpaper change scheduled</string>
    <string name="image_url_is_invalid">Image URL is invalid.</string>
    <string name="wallpaper_set_successfully">Wallpaper Set Successfully</string>
    <string name="failed_to_set_wallpaper">Failed to set wallpaper</string>
    <string name="delete_info">Are you sure you want to delete selected wallpapers?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="download_started">Download started…</string>
    <string name="download_failed">Download failed: %1$s</string>
    <string name="download">Download</string>
    <string name="stop_wallpaper_play">Stop Wallpaper Play</string>
    <string name="listening">Listening...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Login Screen -->
    <string name="login_title">Welcome Back</string>
    <string name="login_subtitle">Log in to continue your journey</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_register">Register</string>

    <string name="register_name_hint">Name</string>
    <string name="login_confirm_password_hint">Confirm Password</string>

    <!-- Signup Screen -->
    <string name="signup_title">Create Account</string>
    <string name="signup_subtitle">Sign up to get started</string>
    <string name="signup_name_hint">Full Name</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="signup_have_account">Already have an account?</string>
    <string name="signup_login">Log In</string>

    <!-- Forgot Password Screen -->
    <string name="forgot_title">Forgot Password?</string>
    <string name="forgot_subtitle">Enter your email to reset your password</string>
    <string name="forgot_email_hint">Email</string>
    <string name="forgot_button">Send Reset Link</string>
    <string name="forgot_back">Back to Login</string>
    <string name="forgot_info">📧 We\'ll send you an email with instructions to reset your password</string>
    <string name="navigate">Navigate</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="member_since">Member Since</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="privacy"><![CDATA[Privacy & Security]]></string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
</resources>