<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <!-- App Icon -->

        <!-- Title -->
        <FrameLayout
            android:layout_width="@dimen/app_icon_size"
            android:layout_height="@dimen/app_icon_size"
            android:layout_marginBottom="@dimen/spacing_xl"
            android:background="@drawable/app_icon_background"
            android:elevation="8dp">

            <ImageView
                android:layout_width="@dimen/app_icon_inner_size"
                android:layout_height="@dimen/app_icon_inner_size"
                android:layout_gravity="center"
                android:contentDescription="@string/login_title"
                android:src="@drawable/ic_login"
                app:tint="@color/text_white" />
        </FrameLayout>

        <TextView
            style="@style/TextHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_sm"
            android:text="@string/login_title" />

        <!-- Subtitle -->
        <TextView
            style="@style/TextSubheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_xxl"
            android:text="@string/login_subtitle" />

        <!-- Container for inputs (max width) -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_padding"
            android:layout_marginEnd="@dimen/screen_padding"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editTextEmail"
                style="@style/InputField"
                android:layout_marginVertical="@dimen/padding_8dp"
                android:autofillHints="emailAddress"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="@dimen/padding_10dp"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/padding_10dp" />

            <!-- Password Input -->

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/InputField"
                android:layout_marginVertical="@dimen/padding_8dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/padding_10dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingStart="@dimen/padding_10dp" />
            <!-- Login Button -->
            <Button
                android:id="@+id/buttonLogin"
                style="@style/PrimaryButton"
                android:text="@string/login_button"
                android:layout_marginBottom="@dimen/spacing_xl" />

            <!-- Forgot Password Link -->
            <TextView
                android:id="@+id/textForgotPassword"
                style="@style/TextLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_md"
                android:padding="@dimen/spacing_sm"
                android:text="@string/login_forgot_password" />

            <!-- Sign Up Section -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_xs"
                    android:text="@string/login_no_account" />

                <TextView
                    android:id="@+id/textSignUp"
                    style="@style/TextLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_sm"
                    android:text="@string/login_register" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>